# Skele-lib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.lame  README.md  build.gradle  local.properties  settings.gradle
audioprocessor/: AudioDescription.hpp  AudioProcessor.hpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.lame  CompressedStreamWriter.cpp  CompressedStreamWriter.hpp  StreamWriter.cpp  StreamWriter.hpp  audioDescription.cpp  audio_buffer.hpp  audio_description.cpp  audio_processor.cpp  audio_processor.hpp  audioprocessor.cpp  audioprocessor.hpp  build.gradle  compressed_stream_writer.cpp  compressed_stream_writer.hpp  compressor.hpp  file.hpp  mp3_compressor.cpp  mp3_compressor.hpp  pcm_processor.cpp  pcm_processor.hpp  signal_processor.hpp  stream_writer.cpp  stream_writer.hpp  system_file.cpp  system_file.hpp  task_queue.cpp  task_queue.hpp
audioprocessor/libs/googletest/: CMakeLists.txt
audioprocessor/src/main/: AndroidManifest.xml  CMakeLists.txt
audioprocessor/src/main/cpp/: CMakeLists.txt  audio_buffer.hpp  audio_processor.cpp  audio_processor.hpp  audio_processor_bridge.cpp  mp3_compressor.cpp  mp3_compressor.hpp  stream_writer.cpp  stream_writer_observer.cpp  stream_writer_observer.hpp  system_file.cpp
audioprocessor/src/main/java/com/cogi/audioprocessor/: AudioProcessor.java  Mp3Compressor.java  Mp3Encoder.java  Mp3PcmStream.java  PcmStream.java  SampleEnergyStream.java  WavPcmStream.java  WaveformVector.java
audioprocessor/src/main/jni/: CMakeLists.txt  audio_processor_bridge.hpp  audio_processor_wrapper.cpp  audio_processor_wrapper.hpp  mp3_compressor_wrapper.cpp  mp3_compressor_wrapper.hpp  wrapper.cpp  wrapper.hpp
audioprocessor/src/test/: CMakeLists.txt
audioprocessor/src/test/cpp/: CMakeLists.txt  circular_queue_test.hpp  file_mock.hpp  mp3_compressor_test.cpp  mp3_compressor_test.hpp  stream_writer_test.cpp  stream_writer_test.hpp  test_stream_writer_observer.hpp
audioprocessor_old/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
skele/: CMakeLists.txt  build.gradle  proguard-rules.pro
skele/src/main/: AndroidManifest.xml
skele/src/main/cpp/: CMakeLists.txt  skele.cpp  skele.hpp
skele/src/main/java/com/cogi/skele/: Skele.java
skele/src/main/jni/: CMakeLists.txt  skele_wrapper.cpp  skele_wrapper.hpp
test_audioprocessor/: AudioProcessorTest.cpp  AudioProcessorTest.hpp  CMakeLists.txt  StreamWriterTest.cpp  StreamWriterTest.hpp  audio_buffer_test.cpp  audio_buffer_test.hpp  audio_processor_test.cpp  circular_queue_test.cpp  compressed_stream_writer_test.cpp  compressed_stream_writer_test.hpp  file_mock.hpp  mp3_compressor_mock.hpp  mp3_compressor_test.cpp  stream_writer_test.cpp  test_audioprocessor.cpp  test_audioprocessor.hpp
